# gstreamer_appsrcsandbox

./: .clang-format  CMakeLists.txt  README.md  record.h  sandbox.cpp
app/: gstappsink.c
